--- a/Config/.env
+++ b/Config/.env
@@ -1,4 +1,1 @@
-PORT = 5000
-MONGO_URI = 'mongodb://localhost:27017/StorageBox'
-NODE_ENV = 'development'
-JWT_SECRET = 'this is my jwt secret !@#$%^&*()[];'
+Write env variables
